# ssh-management-hub-fastAPI

./: .env.example  AGENTS.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
app/: database.py  main.py
app/routers/: __init__.py  admin.py  auth.py  backfill.py  firms.py  reports.py
docs/: CHANGELOG-2026-05-29.md  CI_CD.md
scripts/: add_comments_oci.py  table_comments.sql
tests/: conftest.py  test_admin.py  test_reports.py
